# logic_farm_roguelike

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
assets/ldtk/: demo.ldtk
assets/my_tiled_levels/: level_0.tmx  my_rpg.tiled-session
assets/simplified/World_Level_0/: Collisions.csv  data.json
assets/simplified/World_Level_1/: Collisions.csv  data.json
assets/simplified/World_Level_2/: Collisions.csv  data.json
src/: main.rs  pig.rs  tiled.rs
