[package]
name = "logic_farm_rougelike"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking", "bevy_asset"] }
bevy_rapier2d = { version = "0.22", features = [ "debug-render-2d" ] }
bevy-inspector-egui = "0.19"
rand = "0.8.5"
